# charguess

./: .gitignore  Gemfile  History.txt  Manifest.txt  PostInstall.txt  README.rdoc  Rakefile  charguess.gemspec
ext/charguess/: charguess.c  extconf.rb
ext/libcharguess/cpp/: AUTHORS  COPYRIGHT  EUCJPProber.cpp  EUCKRProber.cpp  EUCTWProber.cpp  EscCharsetProber.cpp  EscSM.cpp  GB2312Prober.cpp  LangBulgarianModel.cpp  LangCyrillicModel.cpp  LangGreekModel.cpp  LangHungarianModel.cpp  LangThaiModel.cpp  Latin1Prober.cpp  MBCSGroupProber.cpp  MBCSSM.cpp  Makefile.am  Makefile.in  SBCSGroupProber.cpp  SBCSGroupProber.h  SBCharsetProber.cpp  SJISProber.cpp  UTF8Prober.cpp  aclocal.m4  autogen.sh  big5Prober.cpp  charDistribution.cpp  charguess.cpp  charguess.h  config.h  config.status  configure  fix_copyright  jpCntx.cpp  types.h  universal.cpp
ext/libcharguess/cpp/.deps/: EUCJPProber.Po  EUCKRProber.Po  EUCTWProber.Po  EscCharsetProber.Po  EscSM.Po  GB2312Prober.Po  LangBulgarianModel.Po  LangCyrillicModel.Po  LangGreekModel.Po  LangHungarianModel.Po  LangThaiModel.Po  Latin1Prober.Po  MBCSGroupProber.Po  MBCSSM.Po  SBCSGroupProber.Po  SBCharsetProber.Po  SJISProber.Po  UTF8Prober.Po  big5Prober.Po  charDistribution.Po  chardet.Po  charguess.Po  jpCntx.Po  universal.Po
ext/libcharguess/cpp/test/: test.cpp
script/: console
tasks/: extconf.rake
tasks/extconf/: charguess.rake
test/: test_charguess.rb  test_charguess_extn.rb  test_helper.rb
